<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_margin="16dp"
  android:padding="16dp"
  android:orientation="vertical">

  <LinearLayout
    android:visibility="gone"
    android:id="@+id/username_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/textView2"
      android:layout_width="80dp"
      android:layout_height="wrap_content"
      android:text="@string/username_label" />
    <EditText
      android:id="@+id/username_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPersonName" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/password_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">
    <TextView
      android:layout_width="80dp"
      android:layout_height="wrap_content"
      android:text="@string/password_label" />
    <EditText
      android:id="@+id/password_field"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPassword" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/error_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textStyle="bold"
      android:textSize="18sp"
      android:visibility="gone"
      tools:text="@string/error_invalid_login"
      android:textColor="@color/red" />
  </LinearLayout>
  <LinearLayout
    android:id="@+id/buttons_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">
    <Button
      android:id="@+id/login_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/login" />
    <Button
      android:id="@+id/cancel_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/cancel" />
  </LinearLayout>
</LinearLayout>